@@ -1,3 +1,5 @@
+2006/3/26 -- released version 20060326_trunk
+
 2006/3/25 -- released version 20060325_trunk
 
 * let the name of the dns server be configured in DNS.pm
